[package]
name = "database-test"
version = "0.1.0"
authors = ["Anton Shabanov <snakesolid@ngs.ru>"]

[profile.dev]
codegen-units = 3

[profile.release]
lto = true

[dependencies]
postgres = "0.15"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"
term = "0.5"

[dependencies.clap]
version = "2.31"
default-features = false
